--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# PyTorch TensorBoard support\n",
     "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('rnn-ocr/tests')\n",
+    "writer = SummaryWriter('temp/rnntests2')\n",
     "\n",
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
@@ -152,7 +152,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'rnn-test11'\n",
+    "title = 'tmp-test1'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -255,49 +255,146 @@
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "   1    |   0.286497   | 89.111111  | 0.190453 | 93.67  | 37.98 \n",
-      "   2    |   0.198404   | 93.156379  | 0.155225 | 94.96  | 38.14 \n",
-      "   3    |   0.168802   | 94.102881  | 0.133788 | 95.15  | 37.95 \n",
-      "   4    |   0.152975   | 94.283951  | 0.128070 | 95.74  | 37.94 \n",
-      "   5    |   0.145939   | 94.526749  | 0.130579 | 95.37  | 38.12 \n",
-      "   6    |   0.139404   | 94.781893  | 0.122297 | 95.44  | 38.21 \n",
-      "   7    |   0.134683   | 95.090535  | 0.120333 | 95.22  | 38.04 \n",
-      "   8    |   0.131919   | 95.148148  | 0.127021 | 95.52  | 38.27 \n",
-      "   9    |   0.129080   | 95.275720  | 0.120378 | 95.33  | 38.33 \n",
-      "  10    |   0.123248   | 95.469136  | 0.121046 | 95.67  | 38.24 \n",
-      "  11    |   0.120397   | 95.576132  | 0.117072 | 95.78  | 37.95 \n",
-      "  12    |   0.118503   | 95.740741  | 0.117028 | 95.93  | 38.11 \n",
-      "  13    |   0.114057   | 95.724280  | 0.129221 | 95.63  | 37.94 \n",
-      "  14    |   0.112387   | 95.925926  | 0.121215 | 95.81  | 38.33 \n",
-      "  15    |   0.110016   | 96.094650  | 0.126801 | 95.89  | 38.27 \n",
-      "  16    |   0.109087   | 96.102881  | 0.117642 | 95.56  | 38.10 \n",
-      "  17    |   0.105849   | 96.057613  | 0.124921 | 95.63  | 38.30 \n",
-      "  18    |   0.104916   | 96.246914  | 0.122859 | 95.74  | 38.33 \n",
-      "  19    |   0.103765   | 96.312757  | 0.126798 | 95.89  | 38.16 \n",
-      "  20    |   0.102348   | 96.246914  | 0.124367 | 95.89  | 37.97 \n",
-      "  21    |   0.099698   | 96.378601  | 0.127742 | 95.15  | 38.11 \n",
-      "  22    |   0.099420   | 96.427984  | 0.119559 | 95.74  | 37.94 \n",
-      "  23    |   0.098033   | 96.530864  | 0.123566 | 95.85  | 38.06 \n",
-      "  24    |   0.093358   | 96.691358  | 0.141286 | 95.56  | 38.04 \n",
-      "  25    |   0.095688   | 96.658436  | 0.121084 | 95.96  | 38.16 \n",
-      "  26    |   0.090391   | 96.925926  | 0.122337 | 96.30  | 37.90 \n",
-      "  27    |   0.100083   | 96.251029  | 0.130010 | 95.78  | 38.14 \n",
-      "  28    |   0.093087   | 96.654321  | 0.118942 | 96.15  | 38.02 \n",
-      "  29    |   0.089700   | 96.786008  | 0.122968 | 96.00  | 38.22 \n",
-      "  30    |   0.087971   | 96.794239  | 0.123699 | 96.44  | 38.20 \n",
-      "  31    |   0.088152   | 96.958848  | 0.126344 | 95.85  | 38.24 \n",
-      "  32    |   0.084920   | 96.983539  | 0.121177 | 96.15  | 38.24 \n",
-      "  33    |   0.084485   | 97.024691  | 0.119660 | 95.93  | 38.20 \n",
-      "  34    |   0.080252   | 97.127572  | 0.124101 | 95.85  | 38.30 \n",
-      "  35    |   0.082135   | 97.135802  | 0.128348 | 96.00  | 37.95 \n",
-      "  36    |   0.080491   | 97.164609  | 0.127264 | 95.63  | 37.96 \n",
-      "  37    |   0.081522   | 97.069959  | 0.130882 | 95.78  | 38.10 \n",
-      "  38    |   0.079096   | 97.189300  | 0.131292 | 95.63  | 38.14 \n",
-      "  39    |   0.081743   | 97.098765  | 0.124740 | 96.07  | 38.17 \n",
-      "  40    |   0.075919   | 97.386831  | 0.145266 | 95.70  | 38.02 \n",
-      "\n",
-      "\n",
-      "Training complete! Best accuracy: 96.44%.\n"
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n",
+      "torch.Size([50, 802])\n",
+      "torch.Size([50, 802, 200])\n",
+      "torch.Size([50, 200])\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/arise/auto/ocr/src/main.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m trainer\u001b[39m.\u001b[39;49mtrain(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49mepochs,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     title\u001b[39m=\u001b[39;49mtitle,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     writer\u001b[39m=\u001b[39;49mwriter,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     train_dataloader\u001b[39m=\u001b[39;49mtrain_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     val_dataloader\u001b[39m=\u001b[39;49mval_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     device\u001b[39m=\u001b[39;49mdevice,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     optimizer\u001b[39m=\u001b[39;49moptimizer,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     loss_fn\u001b[39m=\u001b[39;49mloss_fn\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m )\n",
+      "File \u001b[0;32m~/auto/ocr/src/trainer.py:71\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(epochs, title, writer, train_dataloader, val_dataloader, device, model, optimizer, loss_fn)\u001b[0m\n\u001b[1;32m     68\u001b[0m tot_train_acc\u001b[39m.\u001b[39mappend(accuracy)\n\u001b[1;32m     70\u001b[0m \u001b[39m# Perform a backward pass to calculate gradients\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     73\u001b[0m \u001b[39m# Update parameters\u001b[39;00m\n\u001b[1;32m     74\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/torch/_tensor.py:307\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    298\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    299\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    300\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    301\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    305\u001b[0m         create_graph\u001b[39m=\u001b[39mcreate_graph,\n\u001b[1;32m    306\u001b[0m         inputs\u001b[39m=\u001b[39minputs)\n\u001b[0;32m--> 307\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/torch/autograd/__init__.py:154\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[39mif\u001b[39;00m retain_graph \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    152\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m--> 154\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(\n\u001b[1;32m    155\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    156\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -317,30 +414,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test loss:  0.1594668993493542\n",
-      "test acc:  95.39999999999999\n",
-      "saved precision and recall results to file!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([0., 1., 1.,  ..., 0., 0., 0.], device='cuda:0'),\n",
-       " tensor([0., 1., 1.,  ..., 0., 0., 0.], device='cuda:0'))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tester.test(test_dataloader=test_dataloader,\n",
     "            device=device,\n",
@@ -350,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
