--- a/src/prototype.ipynb
+++ b/src/prototype.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = mu.getModel('cnn-test10')"
+    "model = mu.getModel('rnn-test11')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -29,13 +29,13 @@
      "output_type": "stream",
      "text": [
       "successfully got ch2idx!\n",
-      "42.73% that next line must be omitted.\n"
+      "44.76% that next line must be omitted.\n"
      ]
     }
    ],
    "source": [
-    "first = '모니터링해요. 내가 만든 영상을'\n",
-    "second = '구독하고 시청한 사람들의 반응을 살피는 일도 중요해'\n",
+    "first = '회사 동료'\n",
+    "second = '분들과 다녀왔는데 분위기도 좋고 음식도'\n",
     "\n",
     "predictor.predict(first, second, model)"
    ]
