--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -117,6 +117,17 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyTorch TensorBoard support\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "writer = SummaryWriter('cnn-ocr/tests')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -128,10 +139,6 @@
     }
    ],
    "source": [
-    "# PyTorch TensorBoard support\n",
-    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
-    "writer = SummaryWriter('temp/rnntests2')\n",
-    "\n",
     "if torch.cuda.is_available():       \n",
     "    device = torch.device(\"cuda\")\n",
     "    print(f'There are {torch.cuda.device_count()} GPU(s) available.')\n",
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +159,7 @@
     "# set parameters here\n",
     "# ====================\n",
     "\n",
-    "title = 'tmp-test1'\n",
+    "title = 'cnn-test10'\n",
     "epochs = 40\n",
     "\n",
     "vocab_size=len(ch2idx)\n",
@@ -162,9 +169,9 @@
     "rnn_layers = 1\n",
     "\n",
     "num_filters = [100, 200, 100]\n",
-    "kernel_sizes = [15, 21, 14]\n",
+    "kernel_sizes = [15, 21, 114]\n",
     "\n",
-    "dropout = 0.5\n",
+    "dropout = 0.2\n",
     "\n",
     "learning_rate = 0.001\n",
     "weight_decay = 1e-4\n",
@@ -179,40 +186,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doing with pretrained model!!!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/arise/anaconda3/lib/python3.9/site-packages/torch/nn/modules/rnn.py:62: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.5 and num_layers=1\n",
-      "  warnings.warn(\"dropout option adds dropout after all but last \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OCR_rnn(\n",
+      "doing with pretrained model!!!\n",
+      "OCR_cnn(\n",
       "  (emb): Embedding(133, 200)\n",
-      "  (lstm1): RNN(\n",
-      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.5, bidirectional=True)\n",
+      "  (cnn1): CNN(\n",
+      "    (conv1d_list): ModuleList(\n",
+      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
+      "      (2): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "    )\n",
       "  )\n",
-      "  (lstm2): RNN(\n",
-      "    (rnn): LSTM(200, 100, batch_first=True, dropout=0.5, bidirectional=True)\n",
+      "  (cnn2): CNN(\n",
+      "    (conv1d_list): ModuleList(\n",
+      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
+      "      (2): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "    )\n",
       "  )\n",
-      "  (fc1): Linear(in_features=400, out_features=300, bias=True)\n",
+      "  (fc1): Linear(in_features=800, out_features=300, bias=True)\n",
       "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
-      "  (dp1): Dropout(p=0.5, inplace=False)\n",
-      "  (dp2): Dropout(p=0.5, inplace=False)\n",
+      "  (dp1): Dropout(p=0.2, inplace=False)\n",
+      "  (dp2): Dropout(p=0.2, inplace=False)\n",
       ")\n"
      ]
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -255,146 +256,49 @@
       "\n",
       " Epoch  |  Train Loss  | Train Acc  | Val Loss | Val Acc | Elapsed\n",
       "--------------------------------------------------------------------------------\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n",
-      "torch.Size([50, 802])\n",
-      "torch.Size([50, 802, 200])\n",
-      "torch.Size([50, 200])\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/arise/auto/ocr/src/main.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m trainer\u001b[39m.\u001b[39;49mtrain(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     epochs\u001b[39m=\u001b[39;49mepochs,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     title\u001b[39m=\u001b[39;49mtitle,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     writer\u001b[39m=\u001b[39;49mwriter,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     train_dataloader\u001b[39m=\u001b[39;49mtrain_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     val_dataloader\u001b[39m=\u001b[39;49mval_dataloader,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     device\u001b[39m=\u001b[39;49mdevice,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     model\u001b[39m=\u001b[39;49mmodel,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     optimizer\u001b[39m=\u001b[39;49moptimizer,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     loss_fn\u001b[39m=\u001b[39;49mloss_fn\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/arise/auto/ocr/src/main.ipynb#X12sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m )\n",
-      "File \u001b[0;32m~/auto/ocr/src/trainer.py:71\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(epochs, title, writer, train_dataloader, val_dataloader, device, model, optimizer, loss_fn)\u001b[0m\n\u001b[1;32m     68\u001b[0m tot_train_acc\u001b[39m.\u001b[39mappend(accuracy)\n\u001b[1;32m     70\u001b[0m \u001b[39m# Perform a backward pass to calculate gradients\u001b[39;00m\n\u001b[0;32m---> 71\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     73\u001b[0m \u001b[39m# Update parameters\u001b[39;00m\n\u001b[1;32m     74\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/torch/_tensor.py:307\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    298\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    299\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    300\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    301\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    305\u001b[0m         create_graph\u001b[39m=\u001b[39mcreate_graph,\n\u001b[1;32m    306\u001b[0m         inputs\u001b[39m=\u001b[39minputs)\n\u001b[0;32m--> 307\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs)\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/torch/autograd/__init__.py:154\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[39mif\u001b[39;00m retain_graph \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    152\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m--> 154\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(\n\u001b[1;32m    155\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    156\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "   1    |   0.535848   | 71.757202  | 0.373186 | 83.19  | 19.73 \n",
+      "   2    |   0.370221   | 82.193416  | 0.298440 | 86.74  | 19.29 \n",
+      "   3    |   0.322161   | 84.995885  | 0.293312 | 86.93  | 19.28 \n",
+      "   4    |   0.296760   | 86.358025  | 0.264258 | 88.74  | 19.29 \n",
+      "   5    |   0.286257   | 86.905350  | 0.258040 | 88.74  | 19.29 \n",
+      "   6    |   0.271404   | 87.769547  | 0.252147 | 88.41  | 19.40 \n",
+      "   7    |   0.254484   | 88.576132  | 0.248873 | 89.89  | 19.49 \n",
+      "   8    |   0.250893   | 88.979424  | 0.225216 | 90.48  | 19.28 \n",
+      "   9    |   0.234286   | 89.823045  | 0.251214 | 89.56  | 19.35 \n",
+      "  10    |   0.236620   | 89.744856  | 0.232611 | 90.44  | 19.29 \n",
+      "  11    |   0.223621   | 90.559671  | 0.271627 | 88.93  | 19.29 \n",
+      "  12    |   0.221485   | 90.600823  | 0.229682 | 90.85  | 19.31 \n",
+      "  13    |   0.212018   | 90.934156  | 0.223947 | 90.70  | 19.32 \n",
+      "  14    |   0.211050   | 91.452675  | 0.229513 | 90.56  | 19.30 \n",
+      "  15    |   0.205729   | 91.390947  | 0.222633 | 91.41  | 19.26 \n",
+      "  16    |   0.201074   | 91.724280  | 0.222430 | 90.85  | 19.24 \n",
+      "  17    |   0.194804   | 91.917695  | 0.220854 | 91.70  | 19.21 \n",
+      "  18    |   0.191748   | 91.921811  | 0.219313 | 92.04  | 19.21 \n",
+      "  19    |   0.188545   | 92.238683  | 0.250967 | 90.15  | 19.20 \n",
+      "  20    |   0.185876   | 92.201646  | 0.204006 | 92.22  | 19.20 \n",
+      "  21    |   0.185153   | 92.279835  | 0.214704 | 91.41  | 19.17 \n",
+      "  22    |   0.179110   | 92.403292  | 0.251259 | 90.37  | 19.28 \n",
+      "  23    |   0.178149   | 92.707819  | 0.228375 | 91.22  | 19.28 \n",
+      "  24    |   0.177693   | 92.691358  | 0.202023 | 92.48  | 19.28 \n",
+      "  25    |   0.170751   | 93.020576  | 0.204007 | 91.85  | 19.26 \n",
+      "  26    |   0.166896   | 93.222222  | 0.203587 | 92.48  | 19.28 \n",
+      "  27    |   0.168606   | 93.016461  | 0.235594 | 91.44  | 19.29 \n",
+      "  28    |   0.172751   | 92.909465  | 0.192691 | 93.04  | 19.27 \n",
+      "  29    |   0.167365   | 93.329218  | 0.224875 | 92.26  | 19.27 \n",
+      "  30    |   0.172323   | 92.905350  | 0.221890 | 91.81  | 19.28 \n",
+      "  31    |   0.168243   | 93.185185  | 0.214887 | 91.63  | 19.28 \n",
+      "  32    |   0.162603   | 93.267490  | 0.208043 | 92.67  | 19.28 \n",
+      "  33    |   0.166239   | 93.333333  | 0.190277 | 93.22  | 19.29 \n",
+      "  34    |   0.169372   | 93.115226  | 0.193247 | 93.22  | 19.30 \n",
+      "  35    |   0.165274   | 93.403292  | 0.200687 | 92.44  | 19.26 \n",
+      "  36    |   0.165930   | 93.329218  | 0.194432 | 92.89  | 19.29 \n",
+      "  37    |   0.161169   | 93.395062  | 0.190577 | 93.37  | 19.28 \n",
+      "  38    |   0.167154   | 93.308642  | 0.193211 | 93.33  | 19.32 \n",
+      "  39    |   0.160983   | 93.617284  | 0.201431 | 92.48  | 19.26 \n",
+      "  40    |   0.157090   | 93.576132  | 0.212815 | 92.41  | 19.25 \n",
+      "\n",
+      "\n",
+      "Training complete! Best accuracy: 93.37%.\n"
      ]
     }
    ],
@@ -414,9 +318,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OCR_cnn(\n",
+      "  (emb): Embedding(133, 200)\n",
+      "  (cnn1): CNN(\n",
+      "    (conv1d_list): ModuleList(\n",
+      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
+      "      (2): Conv1d(200, 100, kernel_size=(14,), stride=(1,))\n",
+      "    )\n",
+      "  )\n",
+      "  (cnn2): CNN(\n",
+      "    (conv1d_list): ModuleList(\n",
+      "      (0): Conv1d(200, 100, kernel_size=(15,), stride=(1,))\n",
+      "      (1): Conv1d(200, 200, kernel_size=(21,), stride=(1,))\n",
+      "      (2): Conv1d(200, 100, kernel_size=(14,), stride=(1,))\n",
+      "    )\n",
+      "  )\n",
+      "  (fc1): Linear(in_features=800, out_features=300, bias=True)\n",
+      "  (fc2): Linear(in_features=300, out_features=2, bias=True)\n",
+      "  (dp1): Dropout(p=0.2, inplace=False)\n",
+      "  (dp2): Dropout(p=0.2, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = mu.getModel('cnn-test10')\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test loss:  0.17445512680957714\n",
+      "test acc:  93.53333333333333\n",
+      "saved precision and recall results to file!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0., 1., 1.,  ..., 1., 0., 1.], device='cuda:0'),\n",
+       " tensor([0., 1., 0.,  ..., 1., 0., 1.], device='cuda:0'))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tester.test(test_dataloader=test_dataloader,\n",
     "            device=device,\n",
@@ -426,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
